--- a/index.html
+++ b/index.html
@@ -1,26 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Adrian Blasco Lozano - Data Analyst Portfolio</title>
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-		<script src="https://cdn.tailwindcss.com"></script>
-		<script src="https://cdn.ezsite.ai/static/react.production.min.js"></script>
-		<script src="https://cdn.ezsite.ai/static/react-dom.production.min.js"></script>
-		<script src="https://cdn.ezsite.ai/static/5.3.0/history.production.min.js"></script>
-		<script src="https://cdn.ezsite.ai/static/6.3.0/react-router.production.min.js"></script>
-		<script src="https://cdn.ezsite.ai/static/6.3.0/react-router-dom.production.min.js"></script>
-		<script src="https://cdn.ezsite.ai/static/babel.min.js"></script>
-		<link href="/styles/globals.css" rel="stylesheet">
-		<link href="/styles/components.css" rel="stylesheet">
-		<script project-code="30s8tu7k8oiv" src="https://ezsite.ai/ezsite-api.js"></script>
-		<script src="https://ezsite.ai/ezsite-chatbot.js"></script>
-	<meta name="description" content="Explore the professional portfolio of Adrian Blasco Lozano, showcasing data analysis projects and expertise in data science."><meta property="og:title" content="Discover Adrian Blasco Lozano's Data Analyst Portfolio"><meta property="og:description" content="Dive into Adrian's professional journey in data analysis, featuring projects and insights in the field of data science."><meta name="twitter:title" content="Adrian Blasco Lozano's Data Portfolio 🌟"><meta name="twitter:description" content="Explore Adrian's data analysis projects and expertise in a beautifully designed portfolio."></head>
-	<body>
-		<div id="root"></div>
-		<script type="text/babel" src="/scripts/components.js"></script>
-		<script type="text/babel" src="/scripts/animations.js"></script>
-		<script type="text/babel" src="/scripts/app.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Adrian Blasco Lozano | Machine Learning Engineer Portfolio</title>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="/styles/globals.css" rel="stylesheet" />
+    <link href="/styles/components.css" rel="stylesheet" />
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.ezsite.ai/static/react.production.min.js"></script>
+    <script src="https://cdn.ezsite.ai/static/react-dom.production.min.js"></script>
+    <script src="https://cdn.ezsite.ai/static/5.3.0/history.production.min.js"></script>
+    <script src="https://cdn.ezsite.ai/static/6.3.0/react-router.production.min.js"></script>
+    <script src="https://cdn.ezsite.ai/static/6.3.0/react-router-dom.production.min.js"></script>
+    <script src="https://cdn.ezsite.ai/static/babel.min.js"></script>
+
+    <script
+      project-code="30s8tu7k8oiv"
+      src="https://ezsite.ai/ezsite-api.js"
+    ></script>
+    <script src="https://ezsite.ai/ezsite-chatbot.js"></script>
+
+    <meta
+      name="description"
+      content="Portfolio de Adrian Blasco Lozano. Ingeniero de Machine Learning especializado en NLP, Agentes Autónomos y Ciencia de Datos."
+    />
+
+    <meta
+      property="og:title"
+      content="Portfolio de Adrian Blasco Lozano | Machine Learning Engineer"
+    />
+    <meta
+      property="og:description"
+      content="Proyectos de IA, Agentes Autónomos y NLP. Descubre mis desarrollos en Deep Learning y automatización."
+    />
+    <meta
+      property="og:image"
+      content="https://portfolio-adrian-data-science.vercel.app/preview.png"
+    />
+    <meta
+      property="og:url"
+      content="https://portfolio-adrian-data-science.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Adrian Blasco Lozano | Machine Learning Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Explora mis proyectos de IA y automatización."
+    />
+    <meta
+      name="twitter:image"
+      content="https://portfolio-adrian-data-science.vercel.app/preview.png"
+    />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="text/babel" src="/scripts/components.js"></script>
+    <script type="text/babel" src="/scripts/animations.js"></script>
+    <script type="text/babel" src="/scripts/app.js"></script>
+  </body>
 </html>
